# adi-dsp-programmer

./: .gitignore  CMakeLists.txt  README.md  SigmaStudioFW.c  download.c  download.h  i2c.c  i2c.h  main.c
system_files/: SigmaStudioFW.c  SigmaStudioFW.h  version.txt
